Fixed a couple minor CSS issues within the JS example

--- a/js/index.html
+++ b/js/index.html
@@ -136,7 +136,7 @@
             <div class="row">
                 <div class="col-lg-12">
                         
-                    <h2 class="section-heading">What In The </h2>
+                    <h2 class="section-heading">About GitHub</h2>
                     <p class="lead">GitHub is the best place to share code with friends, co-workers, classmates, and complete strangers. Over eight million people use GitHub to build amazing things together. </p>
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
@@ -199,7 +199,10 @@
 
    </div>
  </div>
-
+		
+		<!-- Jquery (Bootstrap JS depends on it) -->
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		
     <!-- Bootstrap Core JavaScript -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     
